--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Portfolio-Website</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -255,7 +255,7 @@ the different fields.
 
          <div class="nine columns main-col">
 
-            <p>I have a completely vast areas of interest, I am into astronomy, content-writing, blogging, music and so many things. But when I sum up all my interests, I see my self more inclined towards scinece and technology, Machine learning, APIs, software developements. This is the soul reason I am looking forward to this profile.
+            <p>I have a completely vast areas of interest, I am into astronomy, content-writing, blogging, music and so many things. But when I sum up all my interests, I see my self more inclined towards science and technology, Machine learning, APIs, software developements. This is the soul reason I am looking forward to this profile.
             </p>
 
 				<div class="bars">
