--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
                <div class="twelve columns">
 
                   <h3>Research on Gravitational Lensing</h3>
-                  <p class="info">Asistant <span>&bull;</span> <em class="date">December 2020 - Present</em></p>
+                  <p class="info">Assistant <span>&bull;</span> <em class="date">December 2020 - Present</em></p>
 
                   <p>
-                  This project focuses on the study behind the phenomenon named "Gravitational Lensing" lead by Dr. Prasun Dutta (Asistant Professor, IIT (BHU) Varanasi - Physics Department)
+                  This project focuses on the study behind the phenomenon named "Gravitational Lensing" lead by Dr. Prasun Dutta (Assistant Professor, IIT (BHU) Varanasi - Physics Department)
 
                   </p>
 
