--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+            <li><a class="smoothscroll" href="#testimonials">Quotes</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -385,7 +385,7 @@ the different fields.
 
          <div class="two columns header-col">
 
-            <h1><span>Get Hosting.</span></h1>
+            <h1><span></span></h1>
 
          </div>
 
@@ -422,7 +422,7 @@ July 2020 - September 2020<br>
 
             <div class="two columns header-col">
 
-               <h1><span>Client Testimonials</span></h1>
+               <h1><span>Quotes</span></h1>
 
             </div>
 
