--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                   <p>
                   A baby telescope, that was totally made up from the scratch with the medium resolution. This project was the part of an event named Telescon-2019, and our baby telescope
-won the first prize being the best modle and also the most eco-friendly modle. 
+won the first prize being the best model and also the most eco-friendly modle. 
                   </p>
 
                </div>
