--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Quotes</a></li>
+            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -198,10 +198,10 @@
                <div class="twelve columns">
 
                   <h3>Research on Gravitational Lensing</h3>
-                  <p class="info">Assistant <span>&bull;</span> <em class="date">December 2020 - Present</em></p>
+                  <p class="info">Asistant <span>&bull;</span> <em class="date">December 2020 - Present</em></p>
 
                   <p>
-                  This project focuses on the study behind the phenomenon named "Gravitational Lensing" lead by Dr. Prasun Dutta (Assistant Professor, IIT (BHU) Varanasi - Physics Department)
+                  This project focuses on the study behind the phenomenon named "Gravitational Lensing" lead by Dr. Prasun Dutta (Asistant Professor, IIT (BHU) Varanasi - Physics Department)
 
                   </p>
 
@@ -218,7 +218,7 @@
 
                   <p>
                   A baby telescope, that was totally made up from the scratch with the medium resolution. This project was the part of an event named Telescon-2019, and our baby telescope
-won the first prize being the best model and also the most eco-friendly modle. 
+won the first prize being the best modle and also the most eco-friendly modle. 
                   </p>
 
                </div>
@@ -255,7 +255,7 @@ the different fields.
 
          <div class="nine columns main-col">
 
-            <p>I have a completely vast areas of interest, I am into astronomy, content-writing, blogging, music and so many things. But when I sum up all my interests, I see my self more inclined towards science and technology, Machine learning, APIs, software developements. This is the soul reason I am looking forward to this profile.
+            <p>I have a completely vast areas of interest, I am into astronomy, content-writing, blogging, music and so many things. But when I sum up all my interests, I see my self more inclined towards scinece and technology, Machine learning, APIs, software developements. This is the soul reason I am looking forward to this profile.
             </p>
 
 				<div class="bars">
@@ -324,6 +324,38 @@ the different fields.
 
                   </div>
           		</div> <!-- item end -->
+                <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-03" title="">
+                        <img alt="" src="images/modal3.jpeg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>Notes app</h5>
+                              <p>Website</p>
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+          		</div> <!-- item end -->
+                <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-04" title="">
+                        <img alt="" src="images/modal4.jpeg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>IIT BHU Library</h5>
+                              <p>Website</p>
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+          		</div> <!-- item end -->
 
                
 
@@ -368,6 +400,38 @@ the different fields.
             </div>
 
 	      </div><!-- modal-02 End -->
+         <div id="modal-03" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/modal3.jpeg" alt="" />
+
+		      <div class="description-box">
+			      <h4>Notes App</h4>
+			      <p>This project is purely based upon Javascript.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Web development</span>
+		      </div>
+
+            <div class="link-box">
+               <a href="projects/Notes_website/index.html" target="_blank">Details</a>
+		         <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+	      </div><!-- modal-02 End -->
+         <div id="modal-04" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/modal4.jpeg" alt="" />
+
+		      <div class="description-box">
+			      <h4>IIT BHU Library</h4>
+			      <p>This project is purely based upon Javascript but has the concept of classes and object inheritance.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Web development</span>
+		      </div>
+
+            <div class="link-box">
+               <a href="projects/Library website/index.html" target="_blank">Details</a>
+		         <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+	      </div><!-- modal-02 End -->
 
          
 
@@ -385,7 +449,7 @@ the different fields.
 
          <div class="two columns header-col">
 
-            <h1><span></span></h1>
+            <h1><span>Get Hosting.</span></h1>
 
          </div>
 
@@ -422,7 +486,7 @@ July 2020 - September 2020<br>
 
             <div class="two columns header-col">
 
-               <h1><span>Quotes</span></h1>
+               <h1><span>Client Testimonials</span></h1>
 
             </div>
 
